gcc/testsuite/gdc.test/fail_compilation/fail7524a.d
/*
REQUIRED_ARGS: -o-
TEST_OUTPUT:
----
fail_compilation/fail7524a.d(9): Error: invalid filename for `#line` directive
----
*/

#line 47 __DATE__
